04.Application-Lifecycle/exercise-application/application-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  selector:
    matchLabels:
      app: webserver
  replicas: 1
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: apache
          image: registry.access.redhat.com/rhscl/httpd-24-rhel7
          ports:
            - containerPort: 8080
              name: webserver
          volumeMounts:
            - mountPath: /app/application.html
              name: application-prod
              subPath: application.html
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - configMap:
            defaultMode: 420
            items:
            - key: application.html
              path: application.html
            name: application-prod
          name: application-prod
